--- a/scheme/templates/scheme/dataset.html
+++ b/scheme/templates/scheme/dataset.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- semantic UI -->
+    <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <title>{{ name }} - Datasets</title>
 </head>
 <body>
-    <h1>
-        {{ name }}
-    </h1>
+    <center>
     <h2>
+        {{ name }}
+    </h2>
+    <h4>
         <!-- Special syntax for django to get dynamic content  -->
         Hello
-    </h2>
+    </h4>
     <table border="1 | 0">
         <tr>
             <td>description</td>
@@ -28,6 +32,11 @@
             <td>{{ uploaded_at }}</td>
         </tr>
     </table>
-
+    <a href='{% url "dataset-download" name=name %}'>
+        <button class="blue ui button">
+            <i class="download icon"></i>
+        </button>
+    </a>
+    </center>
 </body>
 </html>
