Add an upload and back button.

--- a/scheme/templates/scheme/dataset.html
+++ b/scheme/templates/scheme/dataset.html
@@ -41,6 +41,11 @@
             <i class="download icon"></i> Download 
         </button>
     </a>
+    <a href='{% url "homepage" %}'>
+        <button class="blue ui button">
+            <i class="left arrow icon"></i> Back to Homepage 
+        </button>
+    </a>
     </center>
 </body>
 </html>
