--- a/scheme/templates/scheme/index.html
+++ b/scheme/templates/scheme/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- semantic UI -->
+    <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <title>All Datasets</title>
 </head>
 <body>
@@ -17,5 +20,11 @@
         </li>
         {% endfor %}
     </ul>
+    <br>
+    <a href='{% url "upload-view" %}'>
+        <button class="blue ui button">
+            <i class="upload icon"></i> Upload Dataset 
+        </button>
+    </a>
 </body>
 </html>
